Fix more spacing stuff

--- a/portal/static/portal/sass/partials/_footer.scss
+++ b/portal/static/portal/sass/partials/_footer.scss
@@ -10,7 +10,8 @@
     @include _font-size(17px);
   }
 
-  label {
+  label,
+  .copyright {
     @include _font-size(16px);
   }
 
